# PyHPC

./: .gitignore  create_dataframes.py  main.py  multistep_model.py  multistep_segmentation_model.ipynb  notes.txt  playground.py  pyproject.toml  requirements.txt  train.py  visualize_napari.sh  write_ome.py  write_ome_multiscale.py
exercises/: Notes.txt  example_job.sh  multicore_job.sh
exercises/week2/: script.py  w2_ex5.py  w2_ex5.sh
exercises/week3/: blosc_arr.bl  w3_blosc_1.py  w3_blosc_1.sh  w3_ex1.py  w3_ex1.sh  w3_ex3.py  w3_ex3.sh  w3_ex5.py  w3_ex5.sh
exercises/week4/: w4_ex1.py  w4_ex2.py  w4_ex2.py.lprof  w4_ex2.sh  w4_ex8.py  w4_ex8.sh
exercises/week5/: w5_ex2.py  w5_ex2.sh  w5_ex3.py  w5_ex3.sh
exercises/week6/: w6_ex1.py  w6_ex1_2.py  w6_ex2.py  w6_ex3.py  w6_ex3.sh
exercises/week7/: w7_ex1.py  w7_ex3.py  w7_ex4.py
exercises/week8/: tests.py  w8_ex1.py  w8_ex2.py  w8_ex2.sh  w8_ex3.py  w8_ex4.py  w8_ex4.sh  w8_mandelbrot_memmap_ex1.py
project/: dataset.py  dataset_prefetch.py  dataset_prefetch_2.py  dataset_prefetch_3.py  dataset_prefetch_4.py  dataset_prefetch_5.py  dataset_prefetch_6.py  prefetch_chat.py
utils/: utils_zarr.py
