[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PyHPC"
version = "0.0.1"
description = "PyHPC"
authors = [
  { name = "August H\u00f8eg", email = "aulho@dtu.dk" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

#[tool.setuptools.dynamic.optional-dependencies]
#dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
select = ["I"]

#[tool.coverage.run]
#omit = ["tests/test_data.py"]

[project.scripts]
train = "main:main"